--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pygtk (2.24.1-6.1) unstable; urgency=medium
+
+  * Initial port to Maemo Leste with hildon patches
+
+ -- Merlijn Wajer <merlijn@wizzup.org>  Wed, 25 Dec 2019 08:50:53 +0100
+
 pygtk (2.24.0-5.1) unstable; urgency=medium
 
   * Non-maintainer upload.
